--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ django-model-utils==3.2.0
 django-annoying==0.10.4
 django_extensions>=2.2.1
 psycopg2>=2.8.3
+pyexcel>=0.5.15
 pyexcel_xls>=0.5.8
 cie>=0.204
 fastkml>=0.11
