--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==2.2.4
 django-address==0.2.1
+django-autocomplete-light==3.4.1
 django-jet==1.0.8
 django-model-utils==3.2.0
 django-annoying==0.10.4
