--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-jet==1.0.8
 django-model-utils==3.2.0
 django-annoying==0.10.4
 django_extensions>=2.2.1
+django-tempus-dominus==5.1.2.8
 phonenumbers==8.10.19
 psycopg2-binary>=2.8.3
 sisa>=0.918
