Fix code styling.

--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ django_extensions>=2.2.1
 phonenumbers==8.10.19
 psycopg2-binary>=2.8.3
 sisa>=0.918
+pycodestyle==2.5.0
 pyexcel>=0.5.15
 pyexcel_xls>=0.5.8
 cie>=0.204
