--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ django-autocomplete-light==3.4.1
 django-crispy-forms==1.7.2
 # django-jet==1.0.8
 django-model-utils==3.2.0
+django-allauth==0.40.0
 django-annoying==0.10.4
 django_extensions>=2.2.1
 django-tempus-dominus==5.1.2.8
