--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
 Django==2.2.4
 django-address==0.2.1
 django-autocomplete-light==3.4.1
+django-braces==1.13.0
 django-crispy-forms==1.7.2
 # django-jet==1.0.8
 django-model-utils==3.2.0
