--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,8 @@ services:
 env:
   -DJANGO=2.2.8 DB=postgres
 before_install:
-  - apt-get install binutils libproj-dev gdal-bin
+  - sudo apt-get update
+  - sudo apt-get install binutils libproj-dev gdal-bin
 install:
   - pip install -r requirements.txt
   - pip install flake8
