--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,8 @@ python:
   - 3.8
 services: 
   - postgresql
+before_script:
+  - psql -c 'create database test_db;' -U postgres
 env:
   -DJANGO=2.2.8 DB=postgres
 before_install:
