failed to test db in travis ... postgis

--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,11 @@ python:
   - 3.8
 services: 
   - postgresql
+addons:
+  postgresql: "9.6"
+  apt:
+    packages:
+    - postgresql-9.6-postgis-2.3
 before_script:
   - psql -c 'create database test_db;' -U postgres
 env:
@@ -17,5 +22,6 @@ install:
 before_script:
   - flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
   - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+  - psql -U postgres -c "create extension postgis"
 script:
   - python manage.py test
