--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,18 +1,34 @@
-version: '3'
+version: "3.8"
 
 services:
-  db:
-    image: mdillon/postgis
-    volumes:
-      - /var/run/postgresql/:/var/run/postgresql/
-  web:
-    build: .
-    command: bash ./docker_entrypoint.sh
-    volumes:
-      - .:/code
-      - /var/run/postgresql/:/var/run/postgresql/
-    ports:
-      - "8000:8000"
-      - "5555:5555"
-    depends_on:
-      - db
+    web:
+        build: .
+        command: python manage.py runserver 0.0.0.0:8000
+        # Create a volume with the content of the repository "."
+        # The volume will be mounted in the container's directory "/code"
+        volumes:
+            - .:/code
+        ports:
+            # Map port 8000 from CONTAINER to access at `localhost:8000`
+            - "8000:8000"
+            - "4000:4000" # ptvsd port for debugging
+        env_file:
+            - ./.docker.env
+        depends_on:
+            - db
+    db:
+        image: postgis/postgis:12-3.0
+        volumes:
+            - db-data:/var/lib/postgresql/data # Give a name to our volume and make it persistent.
+        ports:
+            - "9999:5432"
+        environment:
+            - POSTGRES_USER=ggg
+            - POSTGRES_PASSWORD=ggg
+            - POSTGRES_DB=ggg_dev
+
+volumes:
+    # Tell docker to name the volume "db-data"
+    # After a `docker-compose down -> up` process, docker will notice
+    # there already exists a volume named `db-data` and it will mount it.
+    db-data:
