--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ before_install:
   - psql -U postgres -c "create extension postgis"
 install:
   - pip install -r requirements.txt
-  - pip install flake8
+  - pip install -r dev-requirements.txt
 before_script:
   - flake8 . --count --select=E9,F63,F7,F82 --show-source --statistics
   - flake8 . --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
